# Web-to-Rust-poc

./: .gitignore  README.MD  package-lock.json
proto/: stream-duplex.proto  stream-server.proto
rust-grpc/: Cargo.toml  build.rs  wasm-pack.toml
rust-grpc/src/: lib.rs  main.rs  server-stream.rs  websocket-server.rs
web-grpc/: envoy.yaml  index.html  package-lock.json  package.json  socket.js  vite.config.js
web-grpc/src/: client-duplex.ts  client-server.ts  client-socket.ts
web-grpc/src/proto/: stream.client.ts  stream.ts
web-grpc/src/proto-duplex/: stream-duplex.client.ts  stream-duplex.ts
web-grpc/src/proto-server/: stream-server.client.ts  stream-server.ts
