[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10.2"
tonic-web = "0.10.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures-core = "0.3"
tower-http = { version = "0.4.0", features = ["cors"] }
prost = "0.12"
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "server-stream"
path = "src/server-stream.rs"

[[bin]]
name = "websocket-server"
path = "src/websocket-server.rs"
