[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = []
grpc = ["dep:tonic", "dep:tonic-build"]  # Only include gRPC deps when needed

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "ErrorEvent",
    "console",
    "Window"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
tonic = { version = "0.10", optional = true }

[build-dependencies]
tonic-build = { version = "0.10", optional = true }

